2005-11-24  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Bug gas/1896
	* config/tc-hppa.c (hppa_fix_adjustable): Don't reject for reduction
	R_HPPA relocations that are 32-bits wide.

2005-11-23  Daniel Jacobowitz  <dan@codesourcery.com>
	    Thiemo Seufer <ths@networkno.de>

	* config/tc-mips.c (append_insn): Handle BFD_RELOC_16_PCREL_S2.
	(macro_build): Complain for invalid branch displacements.
	(mips_validate_fix): Delete.
	(md_apply_fix): Re-add pcrel support for branches.  Use consistent
	text for misaligned branch targets.
	(tc_gen_reloc: Re-add pcrel support for branches.  Handle strange
	BFD pcrel processing.  Remove error for unresolved branches.
	* config/tc-mips.h (TC_VALIDATE_FIX, mips_validate_fix): Delete.

2005-11-22  James E Wilson  <wilson@specifix.com>

	* config/tc-ia64.c (emit_one_bundle): Perform last_slot < 0 check
	even when manual_bundling isn't set.

	* config/tc-ia64.c (slot_index): Emit an error instead of a warning
	when the frag chain is broken by section switching.

2005-11-18  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-defs.h (IS_BREG, IS_LREG): New macros.
	* config/bfin-parse.y (asm_1): Check register type for load immediate
	instruction.

2005-11-17  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-ppc.c (ppc_frob_file_before_adjust): Do not reference
	dotname.
	* write.c (write_object_file): Do not remove used weakrefd.

2005-11-17  Jan Beulich  <jbeulich@novell.com>

	* dw2gencfi.c (dot_cfi): Put argument parsing for cases
	DW_CFA_restore and DW_CFA_undefined in a loop.

2005-11-17  Jan Beulich  <jbeulich@novell.com>


	* symbols.h (S_CLEAR_VOLATILE): Declare.
	* symbols.c (colon): Also accept redefinable symbols for
	redefinition. Clone them before modifying.
	(S_CLEAR_VOLATILE): Define.
	* cond.c (s_ifdef): Also test for equated symbols.
	* read.c (s_comm_internal): Also exclude non-redefinable
	equated symbols. Clone redefinable ones before modifying.
	(s_weakref): Clone redefinable symbols before modifying.